Update padding above and below dropdown to fix alignment

--- a/frontend/src/app/shared/components/navigate-to-workplace-dropdown/navigate-to-workplace-dropdown.component.scss
+++ b/frontend/src/app/shared/components/navigate-to-workplace-dropdown/navigate-to-workplace-dropdown.component.scss
@@ -6,7 +6,7 @@
 }
 
 .asc-navigate-to-workplace-dropdown {
-  padding: 5px 0 12px 0;
+  padding: 12px 0 12px 0;
 }
 
 .asc-navigate-to-workplace-dropdown a {
